--- a/trunk/doc/diskmgr.lyx
+++ b/trunk/doc/diskmgr.lyx
@@ -6,7 +6,7 @@
 \begin_preamble
 
 \end_preamble
-\language english
+\language spanish
 \inputencoding latin1
 \fontscheme default
 \graphics default
